redis included in docker + redis configuration added + add redis outputport + change windowcountmessagehandler to put data into redis

--- a/dockerfile/docker-compose.yml
+++ b/dockerfile/docker-compose.yml
@@ -38,6 +38,15 @@ services:
       interval: 10s
       timeout: 2s
       retries: 5
+  redis:
+    image: redis
+    container_name: redis
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
+    volumes:
+        - ./data:/data
+        - ./redis.conf:/usr/local/etc/redis/redis.conf
   kafka:
     image: wurstmeister/kafka:2.12-2.5.0
     ports:
